--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ricardo Hofstetter Dias - Desenvolvedor Frontend</title>
+  <title>João Vitor - Desenvolvedor Frontend</title>
 
   <link rel="stylesheet" href="src/css/font-awesome.css" />
   <link rel="stylesheet" href="src/css/reset.css" />
@@ -28,7 +28,7 @@
     <div class="container">
       <div class="row justify-content-between alinhar-itens-no-centro">
         <a href="#">
-          <h1 class="logo">RD</h1>
+          <h1 class="logo">JV</h1>
         </a>
         <nav>
           <input id="menu-hamburguer" type="checkbox" />
@@ -52,8 +52,8 @@
     <div class="container">
       <div class="row full-screen alinhar-itens-no-centro">
         <div class="texto-home">
-          <p>Olá 🖖,</p>
-          <h1>Sou o Ricardo Dias</h1>
+          <p>Olá,</p>
+          <h1>Sou o João Vitor</h1>
           <h2>Desenvolvedor Frontend</h2>
 
           <div class="redes-sociais">
@@ -80,24 +80,19 @@
         </div>
       </div>
       <div class="row">
-        <div class="imagem-sobre-mim">
-          <div class="img-box inner-shadow">
-            <img src="src/imagens/foto-perfil.png" alt="foto sobre mim" class="outer-shadow" />
-          </div>
-        </div>
         <div class="informacoes-sobre-mim">
           <p>
-            <strong>Olá! Me chamo Ricardo Dias e sou um desenvolvedor frontend em
+            <strong>Olá! Me chamo João Vitor e sou um desenvolvedor frontend em
               formação!</strong>
               Gosto MUITO da área de tecnologia, e tenho certeza que posso contribuir em qualquer time com as minhas habilidades.
           </p>
 
           <p>
-           Estou sempre me desafiando coim novos projetos e participando de comunidades de programação para buscar feedback de outros desenvolvedores e desenvolvedoras. Além de tentar ajudar essas pessoas com o que eu já aprendi. 😁
+           Estou sempre me desafiando com novos projetos e participando de comunidades de programação para buscar feedback de outros desenvolvedores. Além de tentar ajudar essas pessoas com o que eu já aprendi.
           </p>
 
           <p>
-            Ah, gosto de jogos, filmes, séries, animes e outras nerdices. 💜
+            Ah, gosto de jogos, filmes, RPG, programação e outras nerdices.
           </p>
 
           <div class="botoes">
@@ -117,24 +112,13 @@
       </div>
 
       <div class="container-habilidades">
-        <div class="informacoes javascript">
-          <div class="logo">
-            <i class="devicon devicon-javascript-plain" id="javascript"></i>
-          </div>
-          <h3>JavaScript</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt placeat ipsam suscipit consequuntur ex
-            reiciendis alias accusamus quo consectetur. Consequatur sequi ab id expedita facilis cupiditate quia atque
-            dignissimos possimus!</p>
-        </div>
 
         <div class="informacoes html">
           <div class="logo">
             <i class="devicon devicon-html5-plain-wordmark" id="html"></i>
           </div>
           <h3>HTML5</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt placeat ipsam suscipit consequuntur ex
-            reiciendis alias accusamus quo consectetur. Consequatur sequi ab id expedita facilis cupiditate quia atque
-            dignissimos possimus!</p>
+          <p>Sou especialista em HTML5, seu fazer uma boa estrutura com a semantica certa.</p>
         </div>
 
         <div class="informacoes css">
@@ -142,9 +126,15 @@
             <i class="devicon devicon-css3-plain-wordmark" id="css"></i>
           </div>
           <h3>CSS3</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt placeat ipsam suscipit consequuntur ex
-            reiciendis alias accusamus quo consectetur. Consequatur sequi ab id expedita facilis cupiditate quia atque
-            dignissimos possimus!</p>
+          <p>Sou profissional em CSS e se me der um grid em minhas mãos faço um projeto de qualidade</p>
+        </div>
+
+        <div class="informacoes javascript">
+          <div class="logo">
+            <i class="devicon devicon-javascript-plain" id="javascript"></i>
+          </div>
+          <h3>JavaScript</h3>
+          <p>Em JS tenho conhecimentos básicos, mas que podem ajudar e muito na criação de site</p>
         </div>
 
         <div class="informacoes github">
@@ -152,9 +142,7 @@
             <i class="devicon devicon-github-original" id="github"></i>
           </div>
           <h3>GitHub</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt placeat ipsam suscipit consequuntur ex
-            reiciendis alias accusamus quo consectetur. Consequatur sequi ab id expedita facilis cupiditate quia atque
-            dignissimos possimus!</p>
+          <p>O GitHub é uma das plataformas que mais uso no dia a dia, então tenho um grando conhecimento nela</p>
         </div>
 
         <div class="informacoes git">
@@ -162,9 +150,7 @@
             <i class="devicon devicon-git-plain" id="git"></i>
           </div>
           <h3>Git</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt placeat ipsam suscipit consequuntur ex
-            reiciendis alias accusamus quo consectetur. Consequatur sequi ab id expedita facilis cupiditate quia atque
-            dignissimos possimus!</p>
+          <p>O Git é um grande suporte para oGitHub, também uso ela diariamente para atualizar meus projetos</p>
         </div>
       </div>
     </div>
@@ -180,44 +166,44 @@
 
       <div class="container-projetos">
         <div class="projeto">        
-          <a href="https://github.com">
-            <img src="https://via.placeholder.com/515X700" alt="Nome do projeto" />
-            <h3>Projeto 1</h3>
+          <a href="https://joaovitor128.github.io/gta" target="_blank">
+            <img src="./src/imagens/projects/logo-gta.svg" alt="GTA" />
+            <h3>GTA</h3>
             <div class="informacoes-projeto">          
-              <p>Projeto feito usando HTML, CSS e JavaScript</p>
+              <p>Projeto feito usando HTML, CSS e JS</p>
               <p>🔗 Ver no GitHub Pages</p>
             </div>     
           </a>
         </div>
 
         <div class="projeto">        
-          <a href="https://github.com">
-            <img src="https://via.placeholder.com/515X700" alt="Nome do projeto" />
-            <h3>Projeto 2</h3>
+          <a href="https://joaovitor128.github.io/padaria/" target="_blank">
+            <img src="./src/imagens/projects/logo.webp" alt="Projeto Pessoal" />
+            <h3>Projeto Pessoal</h3>
             <div class="informacoes-projeto">          
-              <p>Lorem ipsum</p>
+              <p>Projeto feito usando HTML e CSS</p>
               <p>🔗 Ver no GitHub Pages</p>
             </div>      
           </a>          
         </div>
 
         <div class="projeto">     
-          <a href="https://github.com">
-            <img src="https://via.placeholder.com/515X700" alt="Nome do projeto" />
-            <h3>Projeto 3</h3>
+          <a href="https://joaovitor128.github.io/food/" target="_blank">
+            <img src="./src/imagens/projects/hero.png" alt="Projeto Food" />
+            <h3>FOOD</h3>
             <div class="informacoes-projeto">
-              <p>Lorem ipsum</p>
+              <p>Projeto feito usando HTML e CSS</p>
               <p>🔗 Ver no GitHub Pages</p>
             </div>
           </a>   
         </div>
 
         <div class="projeto">
-          <a href="https://github.com">
-            <img src="https://via.placeholder.com/515X700" alt="Nome do projeto" />
-            <h3>Projeto 4</h3>
+          <a href="https://joaovitor128.github.io/jhooEletrica/" target="_blank">
+            <img src="./src/imagens/projects/eletrica.webp" alt="Nome do projeto" />
+            <h3>Projeto Eletricista</h3>
             <div class="informacoes-projeto">
-              <p>Lorem ipsum</p>
+              <p>Projeto feito usando HTML e CSS</p>
               <p>🔗 Ver no GitHub Pages</p>
             </div>
           </a>
