--- a/index.html
+++ b/index.html
@@ -57,10 +57,9 @@
           <h2>Desenvolvedor Frontend</h2>
 
           <div class="redes-sociais">
-            <a href="#" class="outer-shadow"><i class="fab fa-linkedin-in"></i></a>
-            <a href="#" class="outer-shadow"><i class="fab fa-whatsapp"></i></a>
-            <a href="#" class="outer-shadow"><i class="fab fa-github"></i></a>
-            <a href="#" class="outer-shadow"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/joao-vitor-b220642ab/" class="outer-shadow"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://github.com/JoaoVitor128" class="outer-shadow"><i class="fab fa-github"></i></a>
+            <a href="https://instagram.com/joaovitorpeixoto5" class="outer-shadow"><i class="fab fa-instagram"></i></a>
           </div>
         </div>
 
@@ -216,10 +215,9 @@
     <div class="container">
       <h2>Me envie uma mensagem!</h2>
       <div class="redes-sociais">
-        <a href="#" class="outer-shadow"><i class="fab fa-linkedin-in"></i></a>
-        <a href="#" class="outer-shadow"><i class="fab fa-whatsapp"></i></a>
-        <a href="#" class="outer-shadow"><i class="fab fa-github"></i></a>
-        <a href="#" class="outer-shadow"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/joao-vitor-b220642ab/" class="outer-shadow"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://github.com/JoaoVitor128" class="outer-shadow"><i class="fab fa-github"></i></a>
+        <a href="https://instagram.com/joaovitorpeixoto5" class="outer-shadow"><i class="fab fa-instagram"></i></a>
       </div>
     </div>
   </footer>
