--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <i class="devicon devicon-javascript-plain" id="javascript"></i>
           </div>
           <h3>JavaScript</h3>
-          <p>Em JS tenho conhecimentos básicos, mas que podem ajudar e muito na criação de site</p>
+          <p>Tenho grandes habilidades em react, basta ver meus repositórios😎</p>
         </div>
 
         <div class="informacoes github">
@@ -151,6 +151,15 @@
           <h3>Git</h3>
           <p>O Git é um grande suporte para oGitHub, também uso ela diariamente para atualizar meus projetos</p>
         </div>
+
+        <div class="informacoes react">
+          <div class="logo">
+            <i class="devicon devicon-react-plain" id="react"></i>
+          </div>
+          <h3>React</h3>
+          <p>O react é uma das tecnologias mais completa de TODAS, e nela tenho grandes conhecimentos mas não tudo</p>
+        </div>
+
       </div>
     </div>
   </section>
